fixed alignment issues in navbar header

--- a/src/main/resources/public/css/style_2.css
+++ b/src/main/resources/public/css/style_2.css
@@ -284,5 +284,14 @@ textarea {
     display: none;
 }
 
+.col {
+
+
+
+
+}
+
+
+
 
 
